<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- @author:李颜翎 -->
    <!-- 游客操作 -->
    <string name="app_name">呵 呵</string>
    <string name="hello_world">Hello world!</string>
    <!-- 主页选项操作 -->
    <string name="tag_main_login">登录</string>
    <string name="tag_main_regist">注册</string>
    <string name="tag_main_personalcenter">用户中心</string>
    <string name="tag_main_pushnews">消息推送</string>
    <string name="tag_main_logout">注销</string>
    <string name="tag_main_authority">权限管理</string>
    <string name="tag_main_statistics">后台统计</string>
    <string name="tag_main_exit">退出</string>
    <!-- 主页布局 9.23 -->
    <string name="tag_tab_jokes_newest">最新</string>
    <string name="tag_tab_jokes_best">最赞</string>
    <string name="tag_tab_jokes_word">纯文</string>
    <string name="tag_tab_jokes_audio">语音</string>

    <!-- 提示信息 -->
    <string name="msg_newjoke">有新笑话，快来看看吧</string>
    <string name="msg_saysomething">我来说两句</string>
    <string name="msg_refreshing">正在刷新</string>
    <string name="msg_inputhere">在此输入评论内容</string>
    <string name="msg_pressrecord">按下开始录音</string>
    <string name="msg_welcomelogin">欢迎登陆</string>
    <string name="msg_welcomeregist">欢迎注册</string>
    <string name="msg_inviteregist">还没有账号？快来注册吧</string>
    <string name="msg_inputusername">请输入用户名</string>
    <string name="msg_inputpassword">请输入密码</string>

    <!-- 以前的 -->
    <!-- 用户操作 -->
    <string name="tag_praise">赞一个</string>
    <string name="tag_comment">评论</string>
    <string name="tag_share">分享</string>
    <string name="tag_contribute">+</string>
    <string name="tag_myjoke">我的笑话</string>
    <!-- 管理员操作 -->
    <string name="tag_check">V</string>
    <string name="tag_check_yes">通过</string>
    <string name="tag_check_no">不通过</string>
    <string name="tag_grant">授予</string>
    <string name="tag_revoke">回收</string>
    <string name="tag_funny">通过</string>
    <string name="tag_boring">淘汰</string>

    <!-- 标签 -->
    <string name="tag_username">用户名</string>
    <string name="tag_password">密码</string>
    <string name="tag_age">年龄</string>
    <string name="tag_sex">性别</string>
    <string name="tag_hobby">爱好</string>
    <string name="tag_address">地址</string>
    <string name="tag_email">邮箱</string>
    <string name="tag_myjok">我的笑话</string>
    <!-- 标签   分类依据 -->
    <string name="tag_onlytext">纯文</string>
    <string name="tag_onlyimg">纯图</string>
    <string name="tag_onlyaudio">录音</string>
    <string name="tag_textimg">图文</string>
    <string name="tag_newest">最新</string>
    <string name="tag_best">最赞</string>
    <!-- 用户的选择操作 -->
    <string name="tag_send">发送</string>
    <string name="tag_cancel">取消</string>
    <string name="tag_ensure">确定</string>
    <string name="tag_back">返回</string>

    <!-- 测试语句 -->
    <string name="test_haha1">哈哈哈哈1</string>
    <string name="test_haha2">哈哈哈哈2</string>
    <string name="test_haha3">哈哈哈哈3</string>
    <string name="test_haha4">哈哈哈哈4</string>
    <string name="test_haha5">哈哈哈哈5</string>
    <string name="test_haha6">哈哈哈哈6</string>
    <!-- 此处为笑话列表内容的默认说明值 -->
    <string name="str_jokes_default_user_name">我是用户名</string>
    <string name="str_jokes_default_user_id">我是用户ID</string>
    <string name="str_jokes_default_user_img">我是用户头像</string>
    <string name="str_jokes_default_content_text">我是笑话文本</string>
    <string name="str_jokes_default_content_posttime">我是笑话发布时间</string>
    <string name="str_jokes_default_content_img">我是笑话图片</string>
    <string name="str_jokes_default_content_audio_length">我是笑话音频长度</string>
    <string name="str_jokes_default_count_praise">点赞数</string>
    <string name="str_jokes_default_count_comment">评论数</string>
    <string name="str_jokes_default_count_share">分享数</string>
    <string name="str_loading">正在加载...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>

    <!-- 后台统计布局字符串 -->
    <string name="str_statistics_here">统计信息</string>
    <string name="str_statistics_user_regist">注册情况统计</string>
    <string name="str_statistics_joke_post">笑话发布情况</string>
    <string name="str_statistics_user_proportion">用户比例统计</string>
    <string name="str_statistics_joke_check_proportion">审核比例统计</string>
    <string name="str_statistics_nextyear">+</string>
    <string name="str_statistics_lastyear">-</string>
    <string name="str_statistics_current_year">年份</string>

    <!-- 语音播放设置 -->
    <string name="tag_main_audiorole">发音人</string>
	<string name="tag_main_audiospeed">播放语速</string>
	<string name="tag_main_audiosize">音量大小</string>
	
	<string name="manger">同意</string>
	<string name="manger1">不同意</string>
</resources>