<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:orientation="horizontal" >

        <!-- “最新”tag -->

        <LinearLayout

            android:id="@id/id_ll_jokes_newest"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/id_tv_jokes_newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_tab_jokes_newest"
                android:textColor="@color/_green"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <!-- “最赞”tag -->

        <LinearLayout
            android:id="@id/id_ll_jokes_best"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/id_tv_jokes_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_tab_jokes_best"
                android:textColor="@color/_black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <!-- “纯文”tag -->

        <LinearLayout
            android:id="@id/id_ll_jokes_word"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/id_tv_jokes_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_tab_jokes_word"
                android:textColor="@color/_black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <!-- “语音” -->

        <LinearLayout
            android:id="@id/id_ll_jokes_audio"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/id_tv_jokes_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_tab_jokes_audio"
                android:textColor="@color/_black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </LinearLayout>

    <!-- 滑动指示器 -->

    <ImageView
        android:id="@id/id_iv_tabline"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:background="@drawable/main_tabline" />

</LinearLayout>