<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_gray"
    android:orientation="vertical"
    tools:context=".JokerStatisticsActivity" >

    <!-- @author:李颜翎 -->
    <!-- @说明：这是BOSS后台统计的页面 -->


    <!-- 下面放置统计的数据 -->

    <RelativeLayout
        android:id="@+id/registTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/_green" >

        <ImageView
            android:id="@+id/statisticsClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:src="@drawable/joker_icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="数据统计"
            android:textColor="@color/_white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <Button
            android:id="@id/id_statistics_user_regist"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/mybutton_green"
            android:layout_margin="5dp"
            android:text="@string/str_statistics_user_regist" />


        <Button
            android:id="@id/id_statistics_joke_post"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/mybutton_green"
                android:layout_margin="5dp"
            android:text="@string/str_statistics_joke_post" />


        <Button
            android:id="@id/id_statistics_user_proportion"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
                android:layout_margin="5dp"
            android:background="@drawable/mybutton_green"
            android:text="@string/str_statistics_user_proportion" />
    </LinearLayout>

</LinearLayout>